--- a/lambda-apigateway-dynamodb-ses/index.html
+++ b/lambda-apigateway-dynamodb-ses/index.html
@@ -14,7 +14,7 @@
         };
         $.ajax({
           'type': 'POST',
-          'url': 'https://emb3g7nqab.execute-api.ap-northeast-1.amazonaws.com/default/userregistFunction',
+          'url': 'https://9kltz4fzz6.execute-api.ap-northeast-1.amazonaws.com/default/userInquiryFunction',
           'contentType': 'application/json',
           'data': JSON.stringify(data)
         }).done(function (data, textStatus, jqXHR) {
