--- a/lambda-apigateway-dynamodb-ses/index.html
+++ b/lambda-apigateway-dynamodb-ses/index.html
@@ -5,28 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-      function onSubmit() {
-        var data = {
-          'username': $('#username').val(),
-          'email' : $('#email').val(),
-          'inquiry' : $('#inquiry').val(),
-        };
-        $.ajax({
-          'type': 'POST',
-          'url': 'https://9kltz4fzz6.execute-api.ap-northeast-1.amazonaws.com/default/userInquiryFunction',
-          'contentType': 'application/json',
-          'data': JSON.stringify(data)
-        }).done(function (data, textStatus, jqXHR) {
-          alert('送信完了しました')
-          $('#username').val('');
-          $('#email').val('');
-          $('#inquiry').val('');
-        }).fail(function (jqXHR, textStatus, errorThrown) {
-          alert('サーバー内部でエラーが発生しました');
-        })
-      }
-      </script>
     </head>
     <body>
       <div class="container">
@@ -45,5 +23,36 @@
       </div>
       <button id="submit" class="btn btn-primary mt-4" onclick="onSubmit();return false;">送信</button>
       </div>
-    </body>
+      <script>
+        function onSubmit() {
+          const username = $('#username').val()
+          const email = $('#email').val()
+          const inquiry = $('#inquiry').val()
+          if (!username || !email || !inquiry) {
+            alert('名前、 メールアドレス、お問い合わせ内容を入力してください')
+            return
+          }
+
+          const data = {
+            'username': $('#username').val(),
+            'email' : $('#email').val(),
+            'inquiry' : $('#inquiry').val(),
+          };
+          $.ajax({
+            'type': 'POST',
+            'url': 'https://9kltz4fzz6.execute-api.ap-northeast-1.amazonaws.com/default/userInquiryFunction',
+            'contentType': 'application/json',
+            'data': JSON.stringify(data)
+          }).done((data, textStatus, jqXHR) => {
+            alert('送信完了しました')
+          }).fail((jqXHR, textStatus, errorThrown) => {
+            alert('サーバー内部でエラーが発生しました');
+          }).always(() => {
+            $('#username').val('');
+            $('#email').val('');
+            $('#inquiry').val('');
+          })
+        }
+        </script>
+      </body>
   </html>
