--- a/lambda-apigateway-dynamodb-ses/index.html
+++ b/lambda-apigateway-dynamodb-ses/index.html
@@ -1,58 +1,79 @@
 <!doctype html>
 <html lang="ja">
   <head>
+    <title>{title}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="description" content="" />
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="" />
+    -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    </head>
-    <body>
-      <div class="container">
-      <h1>お問い合わせフォーム</h1>
-      <div class="form-group mt-4">
-        <label for="username" class="form-label">氏名</label>
-        <input type="text" class="form-control" id="username">
-      </div>
-      <div class="form-group mt-4">
-        <label for="email" class="form-label">メールアドレス</label>
-        <input type="text" class="form-control" id="email">
-      </div>
-      <div class="form-group mt-4">
-        <label for="inquiry" class="form-label">お問い合わせ内容</label>
-        <textarea class="form-control" id="inquiry" rows="3"></textarea>
-      </div>
-      <button id="submit" class="btn btn-primary mt-4" onclick="onSubmit();return false;">送信</button>
-      </div>
-      <script>
-        function onSubmit() {
-          const username = $('#username').val()
-          const email = $('#email').val()
-          const inquiry = $('#inquiry').val()
-          if (!username || !email || !inquiry) {
-            alert('名前、 メールアドレス、お問い合わせ内容を入力してください')
-            return
-          }
-
-          const data = {
-            'username': $('#username').val(),
-            'email' : $('#email').val(),
-            'inquiry' : $('#inquiry').val(),
-          };
-          $.ajax({
-            'type': 'POST',
-            'url': 'https://9kltz4fzz6.execute-api.ap-northeast-1.amazonaws.com/default/userInquiryFunction',
-            'contentType': 'application/json',
-            'data': JSON.stringify(data)
-          }).done((data, textStatus, jqXHR) => {
-            alert('送信完了しました')
-          }).fail((jqXHR, textStatus, errorThrown) => {
-            alert('サーバー内部でエラーが発生しました');
-          }).always(() => {
-            $('#username').val('');
-            $('#email').val('');
-            $('#inquiry').val('');
-          })
+    <script>
+      $(function() {
+        var imageUrl = '';
+        $('meta[property="og:image"]').attr('content', imageUrl)
+      })
+    </script>
+    <meta name="description" content="デスクリプションです" />
+    <meta property="og:title" content="ogタイトル" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+    <meta property="og:site_name" content="ogサイト名" />
+    <meta property="og:description" content="デスクリプションです" />
+  </head>
+  <body>
+    <div class="container">
+    <h1>お問い合わせフォーム</h1>
+    <div class="form-group mt-4">
+      <label for="username" class="form-label">氏名</label>
+      <input type="text" class="form-control" id="username">
+    </div>
+    <div class="form-group mt-4">
+      <label for="email" class="form-label">メールアドレス</label>
+      <input type="text" class="form-control" id="email">
+    </div>
+    <div class="form-group mt-4">
+      <label for="inquiry" class="form-label">お問い合わせ内容</label>
+      <textarea class="form-control" id="inquiry" rows="3"></textarea>
+    </div>
+    <button id="submit" class="btn btn-primary mt-4" onclick="onSubmit();return false;">送信</button>
+    </div>
+    <script>
+      function onSubmit() {
+        const username = $('#username').val()
+        const email = $('#email').val()
+        const inquiry = $('#inquiry').val()
+        if (!username || !email || !inquiry) {
+          alert('名前、 メールアドレス、お問い合わせ内容を入力してください')
+          return
         }
-        </script>
-      </body>
-  </html>
+
+        const data = {
+          'username': $('#username').val(),
+          'email' : $('#email').val(),
+          'inquiry' : $('#inquiry').val(),
+        };
+        $.ajax({
+          'type': 'POST',
+          'url': 'https://9kltz4fzz6.execute-api.ap-northeast-1.amazonaws.com/default/userInquiryFunction',
+          'contentType': 'application/json',
+          'data': JSON.stringify(data)
+        }).done((data, textStatus, jqXHR) => {
+          alert('送信完了しました')
+        }).fail((jqXHR, textStatus, errorThrown) => {
+          alert('サーバー内部でエラーが発生しました');
+        }).always(() => {
+          $('#username').val('');
+          $('#email').val('');
+          $('#inquiry').val('');
+        })
+      }
+    </script>
+  </body>
+</html>
