--- a/lambda-apigateway-dynamodb-ses/index.html
+++ b/lambda-apigateway-dynamodb-ses/index.html
@@ -61,7 +61,7 @@
         };
         $.ajax({
           'type': 'POST',
-          'url': 'https://9kltz4fzz6.execute-api.ap-northeast-1.amazonaws.com/default/userInquiryFunction',
+          'url': '', // 一旦消す
           'contentType': 'application/json',
           'data': JSON.stringify(data)
         }).done((data, textStatus, jqXHR) => {
